--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ I tried this same cable on the DSUBs input of the display unit at SuperBooth 202
 
 
 <div id="filterpop">
-<h2>Filter Pop/Click</h2>
+<h2>Master Filter Pop/Click</h2>
 
 <p>
-I can hear very audible artifacts when toggling the master filter. I know the Model 1 advertises its "zero-crossing detection system", which is meant to minimise artifacts when toggling the channel & master filters.
+I can hear very audible artifacts when toggling the master filter. I know the Model 1 advertises its "zero-crossing detection system", which is meant to minimize artifacts when toggling the channel & master filters.
 </p>
 
 <p>
@@ -71,7 +71,7 @@ I was told by Allen&Heath support that this does not guarantee the toggling will
 </p>
 
 <p>
-I would you to hear how the toggling sounds is on my mixer & confirm if you think this is normal (in comparison to ther Model 1 units).
+I would like you to hear how the toggling sounds on my mixer & confirm if you think this is normal (in comparison to ther Model 1 units).
 </p>
 
 <p>
