--- a/index.html
+++ b/index.html
@@ -71,10 +71,6 @@ I was told by Allen&Heath support that this does not guarantee the toggling will
 </p>
 
 <p>
-I would like you to hear how the toggling sounds on my mixer & confirm if you think this is normal (in comparison to ther Model 1 units).
-</p>
-
-<p>
 In the video below you can hear & see the audible artifacts on mine. The ridge in the spectrogram is the filter toggle.
 </p>
 <p><u>You need to be listening with headphones or on proper speakers to hear this.</u></p>
@@ -83,7 +79,7 @@ Instructions to reproduce:
 </h3>
 
 <ol>
-	<li>Turn on master filter on left side.</li>
+	<li>Turn on the master filter on the left side.</li>
 	<li>Reduce some of the high frequencies by twisting the LPF knob to the left.</li>
 	<li>Toggle the master filter for a specific channel while there is sound going through that channel.</li>
 </ol>	
